@@ -23,10 +23,10 @@ char *
 char *
 \fBTcl_Realloc\fR(\fIptr, size\fR)
 .sp
-int
+char *
 \fBTcl_AttemptAlloc\fR(\fIsize\fR)
 .sp
-int
+char *
 \fBTcl_AttemptRealloc\fR(\fIptr, size\fR)
 .SH ARGUMENTS
 .AS char *size
