@@ -1,3 +1,12 @@
+2001-03-27  Jeff Hobbs  <jeffh@gimlet.activestate.com>
+
+	* doc/Alloc.3: corrected docs to note that Tcl_Attempt* return
+	char *'s, not ints. [Bug #411388]
+
+	* tests/regexp.test (regexp-19.1):
+	* generic/tclCmdMZ.c (Tcl_RegsubObjCmd): fixed handling of nulls
+	in subspec value.
+
 2001-03-26  Don Porter  <dgp@users.sourceforge.net>
 	* generic/tclDecls.h (Tcl_InitCustomHashTable):  Correction to
 	patch from 2001-01-18;  tclDecls.h was not generated using
